--- a/packages/smart_dispenser_api_client/pubspec.yaml
+++ b/packages/smart_dispenser_api_client/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  dio: ^4.0.4
-  freezed_annotation: ^1.0.0
+  dio: ^4.0.4  
+  freezed_annotation: ^0.14.1
   pretty_dio_logger: ^1.1.1  
 
 dev_dependencies:
@@ -20,8 +20,8 @@ dev_dependencies:
     sdk: flutter
   very_good_analysis: ^2.4.0
   build_runner: ^2.1.5
-  freezed: ^1.0.0
-  json_serializable: ^6.0.1
+  freezed: ^0.14.1+3
+  json_serializable: ^5.0.2
 
 flutter:
 
