--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.4
   flutter_bloc: ^8.0.0
   flutter_screenutil: ^5.0.0+2
-  freezed_annotation: ^1.0.0
+  freezed_annotation: ^0.14.1
   get_it: ^7.2.0
   injectable: ^1.5.0
   intl: ^0.17.0
@@ -30,8 +30,8 @@ dev_dependencies:
   injectable_generator: ^1.5.2
   very_good_analysis: ^2.4.0
   build_runner: ^2.1.5
-  freezed: ^1.0.0
-  json_serializable: ^6.0.1
+  freezed: ^0.14.1+3
+  json_serializable: ^5.0.2
   
 
   smart_dispenser_api_client:
@@ -51,4 +51,3 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-
